iptables
*nat

# nat source from LAN to the internet
-A POSTROUTING -s 192.168.136.0/24 -o ens256 -j SNAT --to 172.24.133.136

# nat source from DMZ to the internet
-A POSTROUTING -s 192.168.139.0/24 -o ens256 -j SNAT --to 172.24.133.136

# nat destination from internet to DMZ services server
-A PREROUTING -p tcp -i ens256 -d 172.24.133.136 -j DNAT --to-destination 192.168.139.2

# nat destination from internet to different LAN machines
-A PREROUTING -p tcp -i ens256 -d 172.24.133.136 -j DNAT --to-destination 192.168.136.4
-A PREROUTING -p tcp -i ens256 -d 172.24.133.136 -j DNAT --to-destination 192.168.136.3
-A PREROUTING -p tcp -i ens256 -d 172.24.133.136 -j DNAT --to-destination 192.168.136.2

COMMIT

*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]

-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT

-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT

-A FORWARD -m state --state RELATED,ESTABLISHED -j ACCEPT

-A FORWARD -p icmp --icmp-type 8 -m state --state NEW -s 192.168.136.0/24 -j ACCEPT
-A FORWARD -p icmp --icmp-type 8 -m state --state NEW -s 192.168.139.0/24 -j ACCEPT

-A FORWARD -p udp -m udp --dport 53 -m state --state NEW -o ens256 -j ACCEPT

-A FORWARD -p tcp -m tcp --dport 80 -m state --state NEW -o ens256 -j ACCEPT
-A FORWARD -p tcp -m tcp --dport 443 -m state --state NEW -o ens256 -j ACCEPT

# DMZ -------------------------------------------------------------------------------------------------------
# Allow access to web services from LAN to DMZ
-A FORWARD -p tcp -m multiport --dports 80,443 -m state --state NEW -s 192.168.136.4 -d 192.168.139.2 -j ACCEPT
# Allow access to web services from internet to DMZ
-A INPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A FORWARD -p tcp --dport 80 -m state --state NEW -s 172.24.133.136 -d 192.168.139.2 -j ACCEPT
-A FORWARD -p tcp --dport 443 -m state --state NEW -s 172.24.133.136 -d 192.168.139.2 -j ACCEPT

# Allow access to mail services from LAN to DMZ
-A FORWARD -p tcp -m tcp -m multiport --dports 587,995,25 -m state --state NEW -s 192.168.136.0/24 -d 192.168.139.0/24 -j ACCEPT
# Allow access to mail services from internet to DMZ
-A INPUT -p tcp -m state --state NEW -m tcp --dport 587 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 995 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 25 -j ACCEPT
-A FORWARD -p tcp --dport 587 -m state --state NEW -s 172.24.133.136 -d 192.168.139.2 -j ACCEPT
-A FORWARD -p tcp --dport 995 -m state --state NEW -s 172.24.133.136 -d 192.168.139.2 -j ACCEPT
-A FORWARD -p tcp --dport 25 -m state --state NEW -s 172.24.133.136 -d 192.168.139.2 -j ACCEPT

# Allow sending emails from DMZ mail server to other internet mail servers
-A FORWARD -s 192.168.139.2 -p tcp --dport 587 -m state --state NEW -j ACCEPT
-A FORWARD -s 192.168.139.2 -p tcp --dport 995 -m state --state NEW -j ACCEPT
-A FORWARD -s 192.168.139.2 -p tcp --dport 25 -m state --state NEW -j ACCEPT

# Deny direct access from internet to DMZ database server
 -A INPUT -p tcp -s 172.24.133.136 -d 192.168.139.2 --dport 3306 -j DROP

# Allow browsing from DMZ servers for software updates
-A FORWARD -s 192.168.139.0/24 -p tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.139.0/24 -p tcp --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.136.0/24 -p tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.136.0/24 -p tcp --dport 443 -m state --state NEW,ESTABLISHED -j ACCEPT
# -----------------------------------------------------------------------------------------------------------
# LAN -------------------------------------------------------------------------------------------------------
# Allow access from LAN to DMZ database server
-A INPUT -p tcp -s 192.168.136.0/24 -d 192.168.139.2 --dport 3306 -j DROP
-A FORWARD -p tcp --dport 3306 -m state --state NEW -s 192.168.136.4 -d 192.168.139.2 -j ACCEPT
# Allow access from LAN to DMZ mail and web services
-A FORWARD -m state --state NEW -p tcp -s 192.168.136.0/24 -d 192.168.139.2 --dport 587 -j ACCEPT
-A FORWARD -m state --state NEW -p tcp -s 192.168.136.0/24 -d 192.168.139.2 --dport 995 -j ACCEPT
-A FORWARD -m state --state NEW -p tcp -s 192.168.136.0/24 -d 192.168.139.2 --dport 25 -j ACCEPT
# Allow SSH access from LAN to DMZ for the administrator's machine
-A FORWARD -p tcp --dport 22 -m state --state NEW,ESTABLISHED -s 192.168.136.4 -d 192.168.139.0/24 -j ACCEPT
# Allow FTP access from network administrator to internet servers
-A FORWARD -s 192.168.136.4/24 -d 0.0.0.0/0 -p tcp --dport 20 -m state --state NEW -j ACCEPT
-A FORWARD -s 192.168.136.4/24 -d 0.0.0.0/0 -p tcp --dport 21 -m state --state NEW -j ACCEPT
# -----------------------------------------------------------------------------------------------------------
# Extra functionalities -------------------------------------------------------------------------------------
# Strict monitoring for 192.168.139.2 SSH connections
-A INPUT -p tcp --dport 22 -s 192.168.139.2 -m state --state NEW -m recent --set --name SSH_MON
-A INPUT -p tcp --dport 22 -s 192.168.139.2 -m state --state NEW -m recent --update --seconds 60 --hitcount 20 --name SSH_MON -j LOG --log-prefix "SSH Attack (192.168.139.2): "
-A INPUT -p tcp --dport 22 -s 192.168.139.2 -m state --state NEW -m recent --update --seconds 60 --hitcount 20 --name SSH_MON -j DROP

# Strict monitoring for 172.24.133.136 SSH connections
-A INPUT -p tcp --dport 22 -s 172.24.133.136 -m state --state NEW -m recent --set --name SSH_MON
-A INPUT -p tcp --dport 22 -s 172.24.133.136 -m state --state NEW -m recent --update --seconds 60 --hitcount 20 --name SSH_MON -j LOG --log-prefix "SSH"
# -----------------------------------------------------------------------------------------------------------
COMMIT
